--- a/QFurtoApp/www/App/Css/principal.css
+++ b/QFurtoApp/www/App/Css/principal.css
@@ -11,6 +11,7 @@
 
     .navbar-default .navbar-toggle {
         border: none;
+        margin-left: 10px;
     }
 
         .navbar-default .navbar-toggle .icon-bar {
